<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_ClockDefaultParameters" Id="{e67b2ea3-fe26-46dd-9e02-fb491d9b8c40}">
    <Declaration><![CDATA[TYPE ST_ClockDefaultParameters :
STRUCT
	tTaskCycleTime : TIME;
	tCtrlCycleTime : TIME;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>